# ldbfx

./: .buildconfig  .gitignore  LICENSE  README.en.md  README.md  README.zh.md  meson.build
data/: cn.navclub.dbfx.appdata.xml.in  cn.navclub.dbfx.desktop.in  cn.navclub.dbfx.gschema.xml  cn.navclub.ldbfx.appdata.xml.in  cn.navclub.ldbfx.desktop.in  cn.navclub.ldbfx.gschema.xml  dbfx_vala.gresource.xml  ldbfx_vala.gresource.xml  meson.build  mono_kai_extended.xml
data/icons/: meson.build
data/style/: style.css
data/ui/: connect-dialog.ui  connect-dialog.xml  connect_dialog.ui  data-source-compact.xml  dd-dialog.xml  design-table.xml  fx-alert.xml  main-window.ui  main-window.ui~  main-window.xml  menu-bar.xml  menubar.xml  nav-tree-menu.ui  nav-tree-menu.ui~  nav-tree-menu.xml  notebook-ddl.xml  notebook-table.ui  notebook-table.ui~  notebook-table.xml  sqlite-compact.xml  window.ui
flatpak/: cn.navclub.ldbfx.json  cn.navclub.vdbfx.json  cn.navclub.vdbfx.json~
lib/: connection-pool.vala  connection.vala  meson.build  pool.vala
lib/async/: async-work.vala
lib/config/: constant.vala  datasource.vala  db-feature.vala  error-domain.vala  table-column-type.vala
lib/impl/: mysql-connection.vala  sqlite-connection.vala
lib/model/: database-info.vala  database-schema.vala  page-query.vala  table-column.vala  table-info.vala
lib/util/: str-util.vala
po/: LINGUAS  POTFILES  en_US.po  zh_CN.po
src/: main.vala  meson.build  tab-service.vala
src/config/: app-config.vala  nav-tree.vala
src/controller/: main-controller.vala
src/dialog/: connect-dialog.vala  dd-dialog.vala  design-table.vala
src/event/: nav-tree-event.vala
src/model/: table-row-meta.vala
src/util/: json-util.vala  os-util.vala  sql-util.vala  ui-util.vala
src/widget/: data-source-compact.vala  fx-alert.vala  notebook-ddl.vala  notebook-tab.vala  notebook-table.vala  sql-source-view.vala  sqlite-compact.vala
subprojects/sql-parser/: CMakeLists.txt  cmake-build.sh  decl.c  decl.h  expr.c  expr.h  lex.c  lex.h  main.c  sql-ast.c  sql-parser.c  sql-parser.h  stmt.c  stmt.h  str-util.c  str-util.h  system.c  system.h  token.txt  type.h
vapi/: config.vapi  libmariadb.vapi
